--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>E-Commerce Store React</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container fluid">
         <div class="row">
             <div id="root"></div>
         </div>
